<resources>
    <string name="app_name">PCCU4B Mobile</string>
    <string name="CopyRightSplash">Copyright © 2016 evilhawk00</string>
    <string name="SplashLogoDescription">團隊、合作、感動紀錄你的每一刻</string>
    <string name="ReloadBtnText">Reload</string>
    <string name="LoadFailedText">Sorry, loading failed. Please check your Internet connection!</string>
    <string name="LoadCanceledTe手機板xt">You\'ve canceled the loading!</string>
    <string name="AboutName">PCCU4B Statistical Pollng System</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="Version">Version : 1.1a</string>
    <string name="Login">Login</string>
    <string name="CurrentUser">Welcome, XXX</string>
    <string name="textENR1">*Job Description</string>
    <string name="textENR2">(Optional)Remarks</string>
    <string name="textENR3">*Time Spent</string>
    <string name="textENR4">*Date</string>
    <string name="Minutes">Minutes</string>
    <string name="Submit">Submit</string>
    <string name="MyENRrecord">My Contributions</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="DateHint">yyyy-mm-dd</string>
    <string name="Loading_Login">Loading&#8230;</string>
    <string name="MemberList_Label_NickName">NickName:&#160;%1$s</string>
    <string name="MemberList_Label_TotalTimeMinutes">Total Minutes:&#160;%1$s</string>
    <string name="MemberList_Label_NoLoginRecord">Never Logged In</string>
    <string name="JobList_Label_Date">Date:&#160;%1$s</string>
    <string name="JobList_Label_Minutes">%1$s&#160;Minutes</string>
    <string name="Frag_Overview_Label_WelcomeUser">Welcome,&#160;%1$s</string>
    <string name="Dialog_Label_ExitHeader">Confirm Quit?</string>
    <string name="Dialog_Label_ExitContent">Are you sure to quit PCCU4B?</string>
    <string name="Dialog_Label_Yes">Yes</string>
    <string name="Dialog_Label_OK">OK</string>
    <string name="Dialog_Label_Cancel">Cancel</string>
    <string name="Dialog_Label_NetError">Network Error!</string>
    <string name="Dialog_Label_WrongLogin">Wrong credentials, please retry!</string>
    <string name="Dialog_Label_AddJobFailed">Submit Failed!\nPlease check: \n1.Date is not in correct format?\n2.Network error?</string>
    <string name="Dialog_Label_AddJobSuccess">Data successfully added!</string>
    <string name="ProgressDialog_Label_Loading">\u0009Loading&#8230;</string>
    <string name="ProgressDialog_Label_Posting">\u0009Posting&#8230;</string>
    <string name="Toast_Label_Failed">Failed</string>
    <string name="Toast_Label_LogoutFailed">Logout Failed</string>


    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <style name="WhiteButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">15sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>


</resources>
