<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/Login_UpperBanner"
        android:background="@color/white"
        app:layout_heightPercent="38%">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/SplashLogoDescription"
            android:src="@drawable/splash_icon"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/AboutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/About_Name"
            android:paddingTop="3dp"
            android:layout_below="@id/imgLogo"
            android:gravity="center_horizontal"
            android:textSize="16sp" />




    </RelativeLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/Login_form"
        app:layout_heightPercent="54%"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_below="@+id/Login_UpperBanner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:background="@color/ThemeOrange">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LoadingProgress"

                style="?android:attr/progressBarStyle"
                android:indeterminateDrawable="@drawable/ring_rotate"
                android:indeterminateDuration="1000"
                android:indeterminateBehavior="repeat"
                android:indeterminateOnly="true"

                 />




            <TextView
                android:text="@string/Loading_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_toEndOf="@id/LoadingProgress"
                android:layout_toRightOf="@+id/LoadingProgress"
                android:gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_centerInParent="true"
                android:id="@+id/textLoading"
                android:textSize="20sp"
                android:textColor="@color/white"/>


        </RelativeLayout>

    </RelativeLayout>



    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/Login_form"
        app:layout_heightPercent="8%">


        <TextView
            android:text="@string/CopyRightSplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/CopyrightText"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:textSize="12sp"
            android:paddingBottom="15sp"/>



    </RelativeLayout>

</android.support.percent.PercentRelativeLayout>